--- a/app/lib_versions.gradle
+++ b/app/lib_versions.gradle
@@ -3,6 +3,7 @@ ext {
     core_ktx_version = "1.1.0"
     constraintlayout_version = "1.1.3"
     android_material_version = "1.0.0"
+    nav_version ="2.1.0"
     junit_version = "4.12"
     androidx_junit_version = "1.1.1"
     espresso_core_version = "3.2.0"
