--- a/app/lib_versions.gradle
+++ b/app/lib_versions.gradle
@@ -3,6 +3,9 @@ ext {
     core_ktx_version = "1.1.0"
     constraintlayout_version = "1.1.3"
     android_material_version = "1.0.0"
+    legacy_suppor_version = "1.0.0"
+    lifecycle_extensions_version = "2.1.0"
+    lifecycle_viewmodel_ktx_version = "2.0.0"
     nav_version ="2.1.0"
     junit_version = "4.12"
     androidx_junit_version = "1.1.1"
