--- a/app/lib_versions.gradle
+++ b/app/lib_versions.gradle
@@ -6,7 +6,9 @@ ext {
     legacy_suppor_version = "1.0.0"
     lifecycle_extensions_version = "2.1.0"
     lifecycle_viewmodel_ktx_version = "2.0.0"
-    nav_version ="2.1.0"
+    nav_version = "2.1.0"
+    rxandroid_version = "2.1.1"
+    rxjava_version = "2.2.10"
     junit_version = "4.12"
     androidx_junit_version = "1.1.1"
     espresso_core_version = "3.2.0"
