Added Retrofit dependencies

--- a/app/lib_versions.gradle
+++ b/app/lib_versions.gradle
@@ -10,6 +10,7 @@ ext {
     rxandroid_version = "2.1.1"
     rxjava_version = "2.2.10"
     koin_version = "2.0.1"
+    retrofit_version ="2.6.1"
     junit_version = "4.12"
     androidx_junit_version = "1.1.1"
     espresso_core_version = "3.2.0"
