--- a/app/lib_versions.gradle
+++ b/app/lib_versions.gradle
@@ -12,6 +12,7 @@ ext {
     koin_version = "2.0.1"
     retrofit_version ="2.6.1"
     retrofit_rx_adapter_version = "1.0.0"
+    jwt_version = "1.4.0"
     junit_version = "4.12"
     androidx_junit_version = "1.1.1"
     espresso_core_version = "3.2.0"
