--- a/app/lib_versions.gradle
+++ b/app/lib_versions.gradle
@@ -16,4 +16,5 @@ ext {
     junit_version = "4.12"
     androidx_junit_version = "1.1.1"
     espresso_core_version = "3.2.0"
+    stetho_version = "1.5.1"
 }
